feat: Require specifying SGInstanceProfile and SGPostgresConfig for SGDistributedLogs